src/modules/base/kanban/kanban.css
.avonni-kanban__container {
    position: relative;
    height: 100%;
    overflow-x: scroll;
    overflow-y: visible;
}

.slds-path__nav {
    pointer-events: none;
}

.avonni-kanban__path_container {
    overflow: visible;
}

.slds-path__item {
    min-width: 175px;
}

.avonni-kanban__field_container {
    position: relative;
    margin-top: 10px;
    right: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    min-width: 175px;
    height: 100%;
}

.avonni-kanban__tiles_container {
    overflow-y: auto;
    overflow-x: hidden;
    /* max-height: 350px; */
}

.avonni-kanban__variant_base .avonni-kanban__tiles_container {
    height: 100%;
}

.avonni-kanban__header_action {
    position: absolute;
    top: 10px;
    left: 10px;
}

.avonni-kanban__summarize_wrapper {
    min-height: 30px;
}

.avonni-kanban__field {
    position: relative;
    width: 100%;
    min-width: 188px;
    border-right: 1px solid #c9c7c5;
    padding-top: 5px;
}

.avonni-kanban__variant_base .avonni-kanban__field {
    height: 100%;
}

.avonni-kanban__field:first-of-type {
    border-left: 1px solid #c9c7c5;
    min-width: 185px;
}

.avonni-kanban__tile {
    margin: 5px;
    background-color: #ffffff;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    position: relative;
    min-width: 175px;
    user-select: none;
    z-index: 1;
}

.avonni-kanban__actions_menu {
    position: relative;
}

.avonni-kanban__tile:hover:not(.avonni-kanban__dragged):not(.avonni-kanban__tile_read_only) {
    background-color: #f7f7f7;
    cursor: grab;
    z-index: 9999;
    position: relative;
}

.avonni-kanban__variant_base .slds-path__track {
    display: none;
}
.avonni-kanban__variant_base .avonni-kanban__field {
    border-radius: 0.25rem;
    /* box-shadow: 0 0 15px #e1e1e168; */
    background-color: rgb(252, 252, 252);
    margin: 5px;
    border: 1px solid #dbdbdb;
}

.avonni-kanban__variant_base .avonni-kanban__summarize_wrapper {
    display: flex;
    text-align: left;
    flex-direction: column;
    margin-left: 30px;
}

.avonni-kanban__variant_base .avonni-kanban__header_action {
    top: 10px;
    right: 10px;
    left: initial;
}

.avonni-kanban__variant_base .avonni-kanban__summarize {
    text-align: left;
    font-weight: 500;
}

.avonni-kanban__variant_base .avonni-kanban__tile {
    border-bottom: 1px solid #c0c0c0;
}

.avonni-kanban__tile-title {
    font-weight: 500;
    margin: 5px 0;
}

.avonni-kanban__variant_path .avonni-kanban__tile-title {
    display: none;
}

.avonni-kanban__tile:not(.avonni-kanban__dragged),
.avonni-kanban__footer_actions_container {
    transition: transform 0.25s;
    z-index: 1;
}

.avonni-kanban__tile_icon {
    position: absolute;
    right: 3px;
    bottom: 3px;
}

.avonni-kanban__tile_actions {
    position: absolute;
    z-index: 99999;
    right: 3px;
    top: 3px;
}

.avonni-kanban__dragged {
    z-index: 9999;
    position: absolute;
    cursor: grabbing;
    border: 1px dashed #c0c0c0;
    background-color: #e2e2e2;
}

.avonni-kanban__tile_moved {
    z-index: 1;
    position: relative;
    pointer-events: none;
}

.avonni-kanban__footer_actions_container {
    margin: 5px 30px;
}

.avonni-kanban__footer_action {
    border: none;
    background-color: transparent;
    width: 100%;
    display: flex;
    align-items: center;
    transition: background 0.1s;
    border-radius: 0.25rem;
}

.avonni-kanban__footer_action:not(:disabled):hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.avonni-kanban__footer_action > span {
    padding: 3px;
    margin: 3px;
}

.avonni-kanban__footer_action:disabled {
    opacity: 0.5;
}

.avonni-kanban__container::-webkit-scrollbar,
.avonni-kanban__tiles_container::-webkit-scrollbar {
    width: 7px;
    height: 7px;
}

/* Track */
.avonni-kanban__container::-webkit-scrollbar-track,
.avonni-kanban__tiles_container::-webkit-scrollbar-track {
    background: transparent;
}

/* Handle */
.avonni-kanban__container::-webkit-scrollbar-thumb,
.avonni-kanban__tiles_container::-webkit-scrollbar-thumb {
    background: #dbdbdb;
    border-radius: 5px;
}

/* Handle on hover */
.avonni-kanban__container::-webkit-scrollbar-thumb:hover,
.avonni-kanban__tiles_container::-webkit-scrollbar-thumb:hover {
    background: #c0c0c0;
}

